# ankh-morpork-scramble

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  :memory:  AGENTS.md  AGENT_INTEGRATION_ARCHITECTURE.md  AGENT_QUICKSTART.md  CODE_REVIEW.md  Dockerfile  IMPLEMENTATION_STATUS.md  LANGGRAPH_AGENTS.md  MCP_IMPROVEMENT_RECOMMENDATIONS.md  Makefile  PRE_DEPLOYMENT_REVIEW.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  TESTING.md  TEST_BUG_LOG.md  commentary_loop.py  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railway.json  rules.md  run_agents.sh  run_game.py  run_hermes_game.py  run_simple_game.py  test_async_mcp.sh  test_langgraph_agents.py  test_mcp_integration.py
.github/workflows/: test.yml
app/: __init__.py  logging_utils.py  main.py  mcp_server.py
app/agents/: __init__.py  config.py  langgraph_agent.py  referee.py  run_agent.py
app/api/: middleware.py  versus_auth.py
app/game/: __init__.py  ball_handling.py  combat.py  dice.py  event_logger.py  log_formatter.py  log_saver.py  movement.py  pathfinding.py  statistics.py
app/models/: __init__.py  actions.py  agent.py  enums.py  events.py  game_state.py  leaderboard.py  mcp_responses.py  pitch.py  player.py  responses.py  team.py
app/setup/: default_game.py  interactive_game.py
app/state/: action_executor.py  agent_registry.py  game_manager.py  (+2 more)
data/: versus.db
docs/: STATUS.md  TODO.md  agent-skill.md  versus-async-join-plan.md  versus-mode-plan.md
docs_generator/: README.md  __init__.py  config.py  generate.py
simple_agents/: commentator.py  llm.py  model_picker.py  player.py  state_summary.py
skills/: README.md
tests/: __init__.py  conftest.py  test_action_executor.py  test_agents.py  test_api.py  test_ball_handling.py  test_combat.py  test_default_game_setup.py  test_dice.py  test_frontend.py  test_game_manager.py  test_join_and_messages.py  test_leaderboard.py  test_mcp_server.py  test_models.py  test_movement.py  test_pathfinding.py  test_persistence.py  test_run_agent.py  test_setup_phase.py  test_statistics.py  test_validation.py
(+79 files in other folders)
